# BioLife-AU-01-attendance-parser

./: .gitignore  README.md  attendance_docx_parser.py  attendance_htm_parser.py  cleanup.sh  pyproject.toml  readme.md  requirements.txt  setup.sh
web/: app.js  calculator.js  index.html  parser.js  style.css
